# mediaexp

./: .gitignore  README.md  full_experiment.ipynb  main.py  pyproject.toml
assets/images/synthetic/: grid.pgm
report/: lzw_lzss_demo.ipynb
report/report/: BUPTReport.sty  inputsection.tex  main.tex
report/results/: four_panel_test_corr.csv  hf_80_correlations.csv  hf_80_correlations_filtered.csv  hf_80_metrics.csv  hf_80_metrics_filtered.csv  hf_metrics.csv  hf_text_direct.csv  metrics.csv  prepared_datasets_metrics.csv  test_correlations.csv  text_filtered_corr.csv  text_metrics.csv
src/: cli.py  datasets.py  encoder.py  experiment.py  structure_metrics.py
tmp_assets/images/: pattern.pgm
