[project]
name = "mediaexp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.1.1",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=11.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "socksio>=1.0.0",
    "soundfile>=0.13.1",
    "torchcodec>=0.11.1",
]
